[tool.poetry]
name = "tg_channel_stat"
version = "0.1.0"
description = ""
authors = ["kyrylo"]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
html5lib = "^1.1"
httpx = "^0.24.0"
uvloop = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
